--- a/src/ui.css
+++ b/src/ui.css
@@ -5,7 +5,7 @@
   --color-border: var(--figma-color-border);
   --color-border-focus: var(--figma-color-border-selected);
   --color-icon: var(--figma-color-icon);
-  --color-text: var(--figma-color-text);
+  --color-text: var(--figma-color-text-brand);
   --color-bg-brand: var(--figma-color-bg-brand);
   --color-bg-brand-hover: var(--figma-color-bg-brand-hover);
   --color-bg-brand-active: var(--figma-color-bg-brand-pressed);
@@ -14,6 +14,14 @@
   --color-text-brand: var(--figma-color-text-onbrand);
 }
 
+.figma-dark {
+  --color-text: white;
+}
+
+.figma-light {
+  --color-bg: white;
+  --color-text: blue;
+}
 html,
 body,
 main {
@@ -33,6 +41,15 @@ body {
   background: var(--color-bg);
   color: var(--color-text);
   margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-text);
 }
 
 button {
